--- a/src/app/home/components/defibrillateurs/defibrillateurs.page.html
+++ b/src/app/home/components/defibrillateurs/defibrillateurs.page.html
@@ -1,17 +1,95 @@
-<ion-content [fullscreen]="true" color="medium">
-  <ion-content color="medium" class="padding" id="head">  
-    <ion-title>
+<ion-content [fullscreen]="true" color="medium" padding>
+  <ion-content color="medium" class="padding" id="head" padding>  
+    <header>  
       <h2>
         MES DÉFIBRILLATEURS
       </h2>
-    </ion-title>
-    <div>
-      <p>
-        Retrouvez ici tous vos défibrilateurs. 
-        Vous pouvez voir s'ils sont fonctionnels, 
-        s'ils nécessitent de la maintenance, 
-        et en rechercher un en particulier.
-      </p>
-    </div>
+      <div>
+        <p>
+          Retrouvez ici tous vos défibrilateurs. 
+          Vous pouvez voir s'ils sont fonctionnels, 
+          s'ils nécessitent de la maintenance, 
+          et en rechercher un en particulier.
+        </p>
+      </div>
+    </header>
+    <main>
+      <ul>
+        <li>
+          <div class="infos">
+            <h3>
+              <strong>CLA012345678</strong>
+            </h3>
+            <p>
+              <strong>Mairie d'Elattes,</strong>
+              12, rue Jacques Prévert, 42980 Elattes
+            </p>
+          </div>
+          <div class="icone">
+            <img src="../../../../assets/icon/icon_check.png" alt="icone check">
+          </div>
+        </li>
+
+        <li>
+          <div class="infos">
+            <h3>
+              <strong>CLA123456789</strong>
+            </h3>
+            <p>
+              <strong>Gymnase Pierre Peyroche,</strong>
+              1Bis Place des Combattants 42980 Elattes 
+            </p>
+          </div>
+          <div class="icone">
+            <img src="../../../../assets/icon/icon_check.png" alt="icone check">
+          </div>
+        </li>
+
+        <li>
+          <div class="infos">
+            <h3>
+              <strong>CLA234567890</strong>
+            </h3>
+            <p>
+              <strong>Ecole municipale,</strong>
+              26 Rue Jacques Prévert 42980 Elattes
+            </p>
+          </div>
+          <div class="icone">
+            <img src="../../../../assets/icon/icon_danger.png" alt="icone danger">
+          </div>
+        </li>
+
+        <li>
+          <div class="infos">
+            <h3>
+              <strong>CLA34567890</strong>
+            </h3>
+            <p>
+              <strong>Epicerie Samoreau,</strong>
+              17 Boulevard du Commandant Kalchman 42980 Elattes
+            </p>
+          </div>
+          <div class="icone">
+            <img src="../../../../assets/icon/icon_check.png" alt="icone check">
+          </div>
+        </li>
+
+        <li>
+          <div class="infos">
+            <h3>
+              <strong>CLA456789012</strong>
+            </h3>
+            <p>
+              <strong>Moussa&Telli Réparation Informatique</strong>
+              90 Impasse des Cèdres 42980 Elattes
+            </p>
+          </div>
+          <div class="icone">
+            <img src="../../../../assets/icon/icon_inter.png" alt="icone interrogation">
+          </div>
+        </li>
+      </ul>
+    </main>
   </ion-content>
 </ion-content>
