--- a/src/app/home/components/defibrillateurs/defibrillateurs.page.scss
+++ b/src/app/home/components/defibrillateurs/defibrillateurs.page.scss
@@ -26,12 +26,30 @@
   text-decoration: none;
 }
 
-#tooblar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
+ul { 
+  padding: 0;
+  margin: 0 10px;
+  li {
+    background-color: white;
+    color: black;
+    display: flex;
+    margin: 20px 0;
+    border-radius: 10px;
 
-#head {
-  padding: 20px 5px;
+    .infos {
+      border: black;
+      padding: 0 15px;
+      width: 85%;
+      font-size: smaller;
+
+      h3 {
+        font-size: 14px;
+      }
+    }
+
+    .icone {
+      border: black;
+      padding-top: 17px;
+    }
+  }
 }
