--- a/src/app/home/components/commandes/commandes.component.html
+++ b/src/app/home/components/commandes/commandes.component.html
@@ -1,3 +1,9 @@
-<p>
-  commandes works!
-</p>
+<ion-content [fullscreen]="true" padding>
+  <ion-content class="padding" color="secondary" id="head" padding>  
+    <header>  
+      <h2>
+        MES COMMANDES
+      </h2>
+    </header>
+  </ion-content>
+</ion-content>
