--- a/src/app/home/components/defibrillateurs/defibrillateurs.page.scss
+++ b/src/app/home/components/defibrillateurs/defibrillateurs.page.scss
@@ -1,55 +1,266 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+@font-face {
+  font-family: "latoBold";
+  src: url("../../../../assets/font/Lato-Black.ttf");
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+@font-face {
+  font-family: "latoReg";
+  src: url("../../../../assets/font/Lato-Regular.ttf");
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+$titre: "latoBold", arial, sans-serif;
+$content: "latoReg", arial, sans-serif;
 
-  color: #8c8c8c;
+ion-content {
 
-  margin: 0;
-}
+  header {
 
-#container a {
-  text-decoration: none;
-}
-
-ul { 
-  padding: 0;
-  margin: 0 10px;
-  li {
-    background-color: white;
-    color: black;
+    padding: 10px 25px;
     display: flex;
-    margin: 20px 0;
-    border-radius: 10px;
+    flex-direction: column;
 
-    .infos {
-      border: black;
-      padding: 0 15px;
-      width: 85%;
-      font-size: smaller;
 
-      h3 {
-        font-size: 14px;
+    h2 {
+      color: #000099;
+      font-weight: bold;
+      font-family: $titre;
+      font-size: 18px;
+      margin: 0 0 5px 0;
+    }
+
+    div {
+
+      p {
+        color: black;
+        font-family: $content;
+        font-size: 12px;
+        font-weight: bold;
+        margin: 0 0 20px 0;
       }
     }
 
-    .icone {
-      border: black;
-      padding-top: 17px;
+  }
+
+  ul {
+
+    padding: 0;
+    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: $content;
+
+
+    li {
+      background-color: white;
+      color: black;
+      display: flex;
+      justify-content: space-evenly;
+      margin: 5px 0;
+      border-radius: 10px;
+      width: 90%;
+
+      .infos {
+        border: black;
+        padding: 0 10px;
+        width: 75%;
+
+        h3 {
+          font-size: 15px;
+          font-weight: bold;
+        }
+
+        p {
+          font-size: 12px;
+        }
+      }
+
+      .icone {
+        border: black;
+        padding: 17px 10px 0 0;
+      }
     }
   }
 }
+
+
+@media screen and (min-width:768px) {
+
+  header {
+
+    h2 {
+      font-size: 22px;
+    }
+
+    div {
+
+      p {
+        font-size: 15px;
+      }
+    }
+  }
+
+  main {
+
+    ul {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+
+      li {
+        height: 100px;
+        width: 45%;
+
+        .infos {
+          width: 80%;
+
+          h3 {
+            font-size: 18px;
+            margin: 10px 0;
+          }
+
+          p {
+            font-size: 14px;
+          }
+        }
+
+        .icone {
+          object-fit: contain;
+
+          img {
+            width: 120%;
+            max-width: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1024px) {
+
+  header {
+
+    h2 {
+      font-size: 28px;
+    }
+
+    div {
+
+      p {
+        font-size: 20px;
+      }
+    }
+  }
+
+  main {
+
+    ul {
+
+      li {
+        display: block;
+        height: auto;
+
+        .infos {
+          display: flex;
+          flex-direction: column;
+          width: auto;
+
+          h3 {
+            font-size: 24px;
+            text-align: center;
+          }
+
+          p {
+            font-size: 20px;
+            padding: 0 15px;
+          }
+        }
+
+        .icone {
+          display: flex;
+          justify-content: center;
+          padding: 0;
+          margin: 0 0 10px 0;
+
+          img {
+            width: 10%;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1440px) {
+
+  header {
+
+    h2 { 
+      font-size: 35px;
+    }
+
+    div {
+      p { 
+        font-size: 22px;
+      }
+    }
+  }
+
+  main {
+    
+    ul {
+
+      li {
+        height: 235px;
+        width: 30%;
+
+        .infos {
+          height: 140px;
+
+          p { 
+            margin: 10px 0;
+          }
+        }
+
+        .icone {
+
+          img {
+            width: 15%;
+           }
+        }
+      }
+    }
+  }
+}
+
+// @media screen and (min-width:2560px) {
+
+//   header {
+
+//     h2 { }
+
+//     p { }
+//   }
+
+//   main {
+
+//     ul {
+
+//       li {
+
+//         .infos {
+
+//           h3 { }
+
+//           p { }
+//         }
+
+//         .icone {
+
+//           img { }
+//         }
+//       }
+//     }
+//   }
+// }
